# obsidian-custom-publish

./: .gitignore  CLAUDE.md  Jenkinsfile  Justfile
docs/plans/: 2026-03-15-obsidian-publish-replacement-design.md  2026-03-15-obsidian-publish-replacement-plan.md  2026-03-16-callouts-highlights-ui-design.md  2026-03-16-callouts-highlights-ui.md  2026-03-16-homepage-design.md  2026-03-16-syntax-highlight-markdown-improvements-design.md  2026-03-16-syntax-highlight-markdown-improvements.md  2026-03-16-ui-icons-design.md  2026-03-16-ui-icons-plan.md  2026-03-17-code-block-katex-design.md  2026-03-17-design-pattern-refactoring-design.md  2026-03-17-design-pattern-refactoring-plan.md  2026-03-17-publish-parity-design.md  2026-03-17-publish-parity-plan.md  2026-03-17-responsive-design.md  2026-03-17-responsive-plan.md  2026-03-18-publish-parity-design.md  2026-03-18-publish-parity-plan.md
docs/project/: codebase_audit.md
fixtures/vault/: Hub Page.md  Post With Block Refs.md  Post With Callouts.md  (+8 more)
infra/: main.tf  outputs.tf  variables.tf
preprocessor/: Cargo.toml
preprocessor/src/: d2.rs  hub_dates.rs  lib.rs  linker.rs  main.rs  mermaid.rs  nav_tree.rs  output.rs  preview.rs  related.rs  scanner.rs  search.rs  syntax.rs  transform.rs  types.rs  typst_render.rs
preprocessor/tests/: block_ref_test.rs  d2_test.rs  heading_ref_test.rs  image_embed_test.rs  linker_test.rs  nav_tree_test.rs  output_test.rs  preview_test.rs  scanner_test.rs  search_test.rs  transform_test.rs  typst_test.rs
site/: astro.config.mjs  package-lock.json  package.json  tsconfig.json
(+55 files in other folders)
