[package]
name = "obsidian-press"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
comrak = { version = "0.36", default-features = false, features = ["shortcodes"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
regex = "1"
tempfile = "3"
lindera = { version = "2", features = ["embed-ko-dic"] }

[profile.release]
lto = true
codegen-units = 1
